syntax = "proto3";
package kubeappsapis.plugins.fluxv2.packages.v1alpha1;
option go_package = "github.com/kubeapps/kubeapps/cmd/kubeapps-apis/gen/plugins/fluxv2/packages/v1alpha1";

import "google/api/annotations.proto";
import "kubeappsapis/core/packages/v1alpha1/packages.proto";
import "kubeappsapis/core/plugins/v1alpha1/plugins.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service FluxV2PackagesService {
  // GetAvailablePackageSummaries returns the available packages managed by the 'fluxv2' plugin
  rpc GetAvailablePackageSummaries(kubeappsapis.core.packages.v1alpha1.GetAvailablePackageSummariesRequest) returns (kubeappsapis.core.packages.v1alpha1.GetAvailablePackageSummariesResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/availablepackages"
    };
  };
  // GetAvailablePackageDetail returns the package metadata managed by the 'fluxv2' plugin
  rpc GetAvailablePackageDetail(kubeappsapis.core.packages.v1alpha1.GetAvailablePackageDetailRequest) returns (kubeappsapis.core.packages.v1alpha1.GetAvailablePackageDetailResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/availablepackages/c/{available_package_ref.context.cluster}/ns/{available_package_ref.context.namespace}/{available_package_ref.identifier}"
    };
  };
  // GetAvailablePackageVersions returns the package versions managed by the 'fluxv2' plugin
  rpc GetAvailablePackageVersions(kubeappsapis.core.packages.v1alpha1.GetAvailablePackageVersionsRequest) returns (kubeappsapis.core.packages.v1alpha1.GetAvailablePackageVersionsResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/availablepackages/c/{available_package_ref.context.cluster}/ns/{available_package_ref.context.namespace}/{available_package_ref.identifier}/versions"
    };
  }
  // GetPackageRepositories returns the repositories managed by the 'fluxv2' plugin
  rpc GetPackageRepositories(GetPackageRepositoriesRequest) returns (GetPackageRepositoriesResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/packagerepositories"
    };
  };

  // GetInstalledPackageSummaries returns the installed packages managed by the 'fluxv2' plugin
  rpc GetInstalledPackageSummaries(kubeappsapis.core.packages.v1alpha1.GetInstalledPackageSummariesRequest) returns (kubeappsapis.core.packages.v1alpha1.GetInstalledPackageSummariesResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/installedpackages"
    };
  }

  // GetInstalledPackageDetail returns the requested installed package managed by the 'fluxv2' plugin
  rpc GetInstalledPackageDetail(kubeappsapis.core.packages.v1alpha1.GetInstalledPackageDetailRequest) returns (kubeappsapis.core.packages.v1alpha1.GetInstalledPackageDetailResponse) {
    option (google.api.http) = {
      get: "/plugins/fluxv2/packages/v1alpha1/installedpackages/c/{installed_package_ref.context.cluster}/ns/{installed_package_ref.context.namespace}/{installed_package_ref.identifier}"
    };
  }

  // CreateInstalledPackage creates an installed package based on the request.
  rpc CreateInstalledPackage(kubeappsapis.core.packages.v1alpha1.CreateInstalledPackageRequest) returns (kubeappsapis.core.packages.v1alpha1.CreateInstalledPackageResponse) {
    option (google.api.http) = {
      post: "/plugins/fluxv2/packages/v1alpha1/installedpackages"
      body: "*"
    };
  }

  // UpdateInstalledPackage updates an installed package based on the request.
  rpc UpdateInstalledPackage(kubeappsapis.core.packages.v1alpha1.UpdateInstalledPackageRequest) returns (kubeappsapis.core.packages.v1alpha1.UpdateInstalledPackageResponse) {
    option (google.api.http) = {
      put: "/plugins/fluxv2/packages/v1alpha1/installedpackages/c/{installed_package_ref.context.cluster}/ns/{installed_package_ref.context.namespace}/{installed_package_ref.identifier}"
      body: "*"
    };
  }

  // DeleteInstalledPackage deletes an installed package based on the request.
  rpc DeleteInstalledPackage(kubeappsapis.core.packages.v1alpha1.DeleteInstalledPackageRequest) returns (kubeappsapis.core.packages.v1alpha1.DeleteInstalledPackageResponse) {
    option (google.api.http) = {
      delete: "/plugins/fluxv2/packages/v1alpha1/installedpackages/c/{installed_package_ref.context.cluster}/ns/{installed_package_ref.context.namespace}/{installed_package_ref.identifier}"
    };
  }
}

// Specific messages used by the 'fluxv2' plugin

// GetPackageRepositories
//
// Request for GetPackageRepositories
message GetPackageRepositoriesRequest {
  // The context (cluster/namespace) for the request
  kubeappsapis.core.packages.v1alpha1.Context context = 1;
  // TODO: Add standard filters.
}

// GetPackageRepositories
//
// Response for GetPackageRepositories
message GetPackageRepositoriesResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    example: '{"repositories": [{"name": "repo-name.example.com", "namespace": "", "url": "foo.registry.example.com/repo-name/main@sha256:cecd9b51b1f29a773a5228fe04faec121c9fbd2969de55b0c3804269a1d57aa5"}]}'
  };

  // Repositories
  //
  // List of PackageRepository
  repeated PackageRepository repositories = 1;
}

// PackageRepository
//
// A PackageRepository defines a repository of packages for installation.
message PackageRepository {
  // TODO: add example for API docs
  // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
  //   example: '{}'
  // };

  // Package repository name
  //
  // The name identifying package repository on the cluster.
  string name = 1;

  // Package repository namespace
  //
  // An optional namespace for namespaced package repositories.
  string namespace = 2;

  // Package repository URL
  //
  // A url identifying the package repository location.
  string url = 3;

  // Package repository plugin
  //
  // The plugin used to interact with this package repository.
  kubeappsapis.core.plugins.v1alpha1.Plugin plugin = 4;

  // TODO: Other fields such as type, status... TBD.
}
